--- a/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-resumen.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-resumen.xhtml
@@ -13,7 +13,7 @@
                 <p:outputLabel value="Nombre registrado:" />
                 <p:outputLabel value="#{MbFormEstablecimiento.identificacionSeleccionada.nombreRegistrado}"/>
 
-                <p:outputLabel value="Martícula mercantil del establecimiento:" />
+                <p:outputLabel value="Martícula mercantil:" />
                 <p:outputLabel value="#{MbFormEstablecimiento.identificacionSeleccionada.matriculaMercantil}"/>
 
                 <p:outputLabel value="Tipo de establecimiento:" />
@@ -25,7 +25,7 @@
                 <p:outputLabel value="Municipio: " />
                 <p:outputLabel value="#{MbFormEstablecimiento.identificacionSeleccionada.municipio}"/>
 
-                <p:outputLabel value="Dirección del establecimiento: " />
+                <p:outputLabel value="Dirección: " />
                 <p:outputLabel value="#{MbFormEstablecimiento.identificacionSeleccionada.direccion}"/>
 
                 <p:outputLabel value="Indicativo teléfono: " />
@@ -37,14 +37,14 @@
                 <!--p:outputLabel value="Estado: " />
                 <p:outputLabel value="#{MbFormEstablecimiento.identificacionSeleccionada.estadoEst}"/-->
 
-                <p:outputLabel value="Código de la actividad económica: " />
+                <p:outputLabel value="Actividad principal: " />
                 <p:outputLabel value="#{MbFormEstablecimiento.identificacionSeleccionada.actividadPrincipal}"/>
-
-                <p:outputLabel value="¿Es una actividad auxiliar?: " />
-                <p:outputLabel value="#{MbFormEstablecimiento.identificacionSeleccionada.actividadAuxiliarEst==true?'SI':'NO'}"/>
 
                 <p:outputLabel value="Otras actividades: " />
                 <p:outputLabel value="#{MbFormEstablecimiento.identificacionSeleccionada.actividadSecundaria}"/>
+
+                <p:outputLabel value="¿Es una actividad auxiliar?: " />
+                <p:outputLabel value="#{MbFormEstablecimiento.identificacionSeleccionada.actividadAuxiliarEst==true?'SI':'NO'}"/>
 
                 <p:outputLabel value="El establecimiento es unidad auxiliar: " />
                 <p:outputLabel value="#{MbFormEstablecimiento.identificacionSeleccionada.unidadAuxiliarUl==true?'SI':'NO'}"/>
