--- a/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-resumen.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-resumen.xhtml
@@ -32,46 +32,51 @@
                 <p:outputLabel value="Actividad secundarias: " />
                 <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.actividadSecundaria}"/>
 
-                <p:outputLabel value="NIT Unidad Legal:"  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.nit}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
+                <p:outputLabel value="NIT Unidad Legal:"  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
+                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.nit}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
 
-                <p:outputLabel value="DV:"  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.digitoVerificacion}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
+                <p:outputLabel value="DV:"  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
+                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.digitoVerificacion}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
 
-                <p:outputLabel value="Departamento: "  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.departamento}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
+                <p:outputLabel value="Departamento: "  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
+                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.departamento}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
 
-                <p:outputLabel value="Municipio: "  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.municipio}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
+                <p:outputLabel value="Municipio: "  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
+                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.municipio}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
 
-                <p:outputLabel value="Dirección: "  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.direccion}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
+                <p:outputLabel value="Dirección: "  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
+                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.direccion}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
 
-                <p:outputLabel value="Indicativo: "  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.indicativo}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
+                <p:outputLabel value="Indicativo: "  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
+                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.indicativo}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
 
-                <p:outputLabel value="Teléfono: "  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.telefono}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
+                <p:outputLabel value="Teléfono: "  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
+                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.telefono}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
 
-                <p:outputLabel value="Es unidad auxiliar: "  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.unidadAuxiliarUl==true?'SI':'NO'}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
+                <p:outputLabel value="Es unidad auxiliar: "  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
+                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.unidadAuxiliarUl==true?'SI':'NO'}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
 
-                <p:outputLabel value="Orientada al mercado: "  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.orientadaMercadoUl==true?'SI':'NO'}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
-
-                <p:outputLabel value="Nombre Contacto: "  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.nombreContacto}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
-
-                <p:outputLabel value="Cargo: "  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.cargoContacto}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
-
-                <p:outputLabel value="Teléfono de contacto: "  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.telefonoContacto}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
-
-                <p:outputLabel value="Correo electrónico de contacto: "  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.mailContacto}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='COLOMBIA' ? true : false}"/>
+                <p:outputLabel value="Orientada al mercado: "  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
+                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.orientadaMercadoUl==true?'SI':'NO'}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
 
             </h:panelGrid>
+
+            <h4 class="titulo-center-h3">Información de Contacto</h4>
+            <h:panelGrid columns="2" columnClasses="etiquetaFormularioReporte, valorEtiquetaFormularioReporte" style="width: 100%;">
+                <p:outputLabel value="Nombre: "  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
+                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.nombreContacto}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
+
+                <p:outputLabel value="Cargo: "  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
+                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.cargoContacto}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
+
+                <p:outputLabel value="Teléfono: "  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
+                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.telefonoContacto}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
+
+                <p:outputLabel value="Correo electrónico: "  rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
+                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.mailContacto}" rendered="#{MbFormUnidadLegal.identificacionSeleccionada.pais =='Colombia' ? true : false}"/>
+
+            </h:panelGrid>
+            
 
             <!--h4 class="titulo-center-h3">Información de Contacto</h4>
                         <p:separator />
