--- a/GrupoEmpresarial-war/web/interfaz/unidad-legal/itz-informe-unidad-legal.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/unidad-legal/itz-informe-unidad-legal.xhtml
@@ -21,7 +21,7 @@
                         <div class="ui-grid-row">
                             <div class="ui-grid-col-12">
                                 <h4 class="titulo-left-h3">Generación de Reporte</h4>
-                                <p>En esta sección el usuario puede generar un reporte en formato PDF, donde se describe todos los datos de la unidades legales del grupo empresarial.</p>
+                                <p>En esta sección el usuario puede generar un reporte en formato PDF, donde se describe todos los datos de las unidades legales del grupo empresarial.</p>
                                 <p:commandButton id="btnGenerarReporteUnidadLegal" value="Generar reporte" rendered="#{aplicacionPrincipal.browserName != 'Internet Explorer'}"
                                                  update="dlgReportePdf" oncomplete="PF('dlg').show();"
                                                  actionListener="#{MbReporteUnidadLegal.generarReporteUnidadesLegalesPdf()}"/>
@@ -38,7 +38,7 @@
                             <div class="ui-grid-col-12">
 
                                 <h4 class="titulo-left-h3">Actualizar información desde formulario</h4>
-                                <p:outputPanel deferred="true">
+                                <p:outputPanel >
                                     <p:dataTable id="dtUnidadLegal" var="fila" value="#{MbFormUnidadLegal.listaIdentificacion}"
                                                  rowIndexVar="rowIndex"
                                                  emptyMessage="La consulta no genero resultados..." paginatorPosition="bottom" 
@@ -52,6 +52,10 @@
                                         </p:column>
                                         <p:column headerText="Unidad Legal">
                                             <p:outputLabel value="#{fila.nombreRegistrado}"/>
+                                        </p:column>
+                                        <p:column headerText="Actualización" width="100">
+                                            <p:outputLabel rendered="#{(fila.origenActualizacion=='Formulario Web' or fila.origenActualizacion=='Archivo XLS')}" 
+                                                           value="#{fila.id.fecha}"/>
                                         </p:column>
                                         <p:column headerText="" style="width:190px;">
                                             <p:commandLink update="frmInfUnidadLegal:dlgReportePdf" oncomplete="PF('dlg').show();" 
@@ -84,14 +88,14 @@
                                 <p:outputPanel rendered="#{MbLogin.usuarioLogueado.nivelPermiso=='ESCRITURA'}">
 
                                     <h4 class="titulo-left-h3">Actualizar información desde archivo XLS</h4>
-                                    <p>En esta sección el usuario puede descargar un archivo XLS, que contiene el listado de unidades legales del grupo empresarial, la cual podra
+                                    <p>En esta sección el usuario puede descargar un archivo XLS, que contiene el listado de unidades legales del grupo empresarial, la cual podrá
                                         actualizar de forma local y al terminar subir el archivo para actualizar los datos.</p>
                                     <p:commandButton id="btnGenerarXlsUnidadLelgal" value="Generar Excel" ajax="false" 
                                                      actionListener="#{MbEscribirExcelUnidadLegal.generarArchivoXls()}"
                                                      onclick="PrimeFaces.monitorDownload(start, stop);" icon="ui-icon-arrowthick-1-s">
                                         <p:fileDownload value="#{MbEscribirExcelUnidadLegal.file}" />
                                     </p:commandButton>
-                                    <p>Subir el archivo con la ifnromación de las unidades legales diligenciada para actualizar los datos.</p>
+                                    <p>Subir el archivo con la información de las unidades legales diligenciada para actualizar los datos.</p>
                                     <ui:include src="../utilidades/cpt-cargar-archivo-xls.xhtml">
                                         <ui:param name="frmPadre" value="frmInfUnidadLegal" />
                                         <ui:param name="formulario" value="UNIDAD_LEGAL" />
@@ -103,7 +107,7 @@
                     </div>
 
                     <p:dialog id="dlgReportePdf" header="Reporte Unidad Legal" widgetVar="dlg" appendTo="@(body)"
-                              resizable="false" modal="true" width="800" height="550">
+                              resizable="false" modal="true" width="880" height="550">
                         <!--p:panelGrid id="pnlReportePdf" columns="1" style="width: 100%; height: 100%">
                             </p:panelGrid-->
                         <p:outputPanel deferred="true">
