--- a/GrupoEmpresarial-war/web/plantilla/encabezado.xhtml
+++ b/GrupoEmpresarial-war/web/plantilla/encabezado.xhtml
@@ -8,15 +8,38 @@
             <div class="ui-grid ui-grid-responsive">
                 <!--h:outputText value="#{resourceSistema['header.title']}" /--> 
                 <div class="ui-grid-row">
-                    <div class="ui-grid-col-3" style="text-align: left;">
+                    <div class="ui-grid-col-2" style="text-align: left;">
                         <p:graphicImage value="/resources/imagen/dane.png" width="320" height="87"/>
                     </div>
                     <div class="ui-grid-col-7">
                         <p:outputLabel value="#{aplicacionPrincipal.sistemaInfo.tituloProyecto}" escape="false"/>
                     </div>
-                    <div class="ui-grid-col-2" style="text-align: right;">
+                    <div class="ui-grid-col-3" style="text-align: right;">
                         <div style="height: 85px;-ms-display: flex;display: flex; align-items: flex-end;justify-content: flex-end;">
-                            <p:outputLabel value="Bienvenid@, #{MbLogin.usuarioLogueado.nombres}" rendered="#{MbLogin.loggedIn}"/>
+                            <p:outputLabel value="#{MbLogin.usuarioLogueado.nombres}" rendered="#{MbLogin.loggedIn}"/>
+                            <p:outputLabel value="&nbsp;|&nbsp;" rendered="#{MbLogin.versionPlantilla == 'V2'}"/>
+                            <h:form>
+                                <p:commandLink id="dynaButton" rendered="#{MbLogin.versionPlantilla == 'V2'}">
+                                    <h:outputText value="Menú" style="font-weight: bold;"/>
+                                </p:commandLink>
+                                <p:menu overlay="true" trigger="dynaButton" my="left top" at="left bottom" 
+                                        triggerEvent="mouseover">
+                                    <!--p:submenu label="Principal">
+                                        <p:menuitem value="Perfilamiento de datos" outcome="/inicio.xhtml"/>
+                                        <p:menuitem value="Guía de Usuario" outcome="/interfaz/usuario/itz-guia-usuario.xhtml"/>
+                                    </p:submenu>
+                                    <p:submenu label="Usuario">
+                                        <p:menuitem value="Mi cuenta" outcome="/interfaz/usuario/itz-perfil-usuario.xhtml"/>
+                                        <p:menuitem value="Salir" actionListener="#{MbLogin.logout}"/>
+                                    </p:submenu-->
+                                        <p:menuitem value="Perfilamiento de datos" outcome="/inicio.xhtml"/>
+                                        <p:menuitem value="Guía de Usuario" outcome="/interfaz/usuario/itz-guia-usuario.xhtml"/>
+                                        <p:separator />
+                                        <p:menuitem value="Mi cuenta" outcome="/interfaz/usuario/itz-perfil-usuario.xhtml"/>
+                                        <p:menuitem value="Salir" actionListener="#{MbLogin.logout}"/>
+                                </p:menu>
+                            </h:form>
+                            <p:outputLabel value="&nbsp;|&nbsp;" rendered="#{MbLogin.versionPlantilla == 'V2'}"/>
                         </div>
                     </div>
                 </div>
