--- a/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-tamano.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-tamano.xhtml
@@ -8,7 +8,7 @@
     <p:panel>
         <p:tooltip />
 
-        <h:panelGrid columns="3" columnClasses="label, value" >
+        <h:panelGrid columns="3" columnClasses="label, value"  cellpadding="0" cellspacing="0">
 
             <!--
             <h:outputText value="Información con corte a:: " styleClass="etiquetaFormulario"/>
