--- a/GrupoEmpresarial-war/web/interfaz/usuario/componente/cpt-formulario-usuario.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/usuario/componente/cpt-formulario-usuario.xhtml
@@ -21,7 +21,7 @@
                         <p:outputLabel for="txtNickname" value="Usuario:" styleClass="etiquetaFormularioAdministracion"/>
                     </div>
                     <div class="ui-grid-col-9">
-                        <p:inputText id="txtNickname" value="#{MbAdministrarUsuario.usuarioSeleccionado.nickname}"  required="true" style="width: 90%;"/>        
+                        <p:inputText id="txtNickname" value="#{MbAdministrarUsuario.usuarioSeleccionado.nickname}"  required="true" style="width: 90%;"/>
                     </div>
                 </div>
                 <div class="ui-grid-row">
@@ -39,7 +39,7 @@
                         <p:outputLabel for="txtNombres" value="Nombres:" styleClass="etiquetaFormularioAdministracion"/>
                     </div>
                     <div class="ui-grid-col-9">
-                        <p:inputText id="txtNombres" value="#{MbAdministrarUsuario.usuarioSeleccionado.nombres}"  required="true" style="width: 90%;"/>        
+                        <p:inputText id="txtNombres" value="#{MbAdministrarUsuario.usuarioSeleccionado.nombres}"  required="true" style="width: 90%;"/>
                     </div>
                 </div>
                 <div class="ui-grid-row">
@@ -47,7 +47,7 @@
                         <p:outputLabel for="txtApellidos" value="Apellidos:" styleClass="etiquetaFormularioAdministracion"/>
                     </div>
                     <div class="ui-grid-col-9">
-                        <p:inputText id="txtApellidos" value="#{MbAdministrarUsuario.usuarioSeleccionado.apellidos}" required="true" style="width: 90%;"/>        
+                        <p:inputText id="txtApellidos" value="#{MbAdministrarUsuario.usuarioSeleccionado.apellidos}" required="true" style="width: 90%;"/>
                     </div>
                 </div>
                 <div class="ui-grid-row">
@@ -55,15 +55,20 @@
                         <p:outputLabel for="txtCorreo" value="Correo:" styleClass="etiquetaFormularioAdministracion"/>
                     </div>
                     <div class="ui-grid-col-9">
-                        <p:inputText id="txtCorreo" value="#{MbAdministrarUsuario.usuarioSeleccionado.correo}" required="true"  style="width: 90%;"/>                    
+                        <p:inputText id="txtCorreo" value="#{MbAdministrarUsuario.usuarioSeleccionado.correo}" required="true"  style="width: 90%;"/>
                     </div>
                 </div>
                 <div class="ui-grid-row">
                     <div class="ui-grid-col-3">
                         <p:outputLabel for="txtIdGrupo" value="ID Grupo: " styleClass="etiquetaFormularioAdministracion"/>
                     </div>
-                    <div class="ui-grid-col-9">
-                        <p:inputText id="txtIdGrupo" value="#{MbAdministrarUsuario.usuarioSeleccionado.idIdentificacion}" required="true"  style="width: 90%;"/>                    
+                    <div class="ui-grid-col-7">
+                        <p:inputText id="txtIdGrupo" value="#{MbAdministrarUsuario.usuarioSeleccionado.idIdentificacion}" required="true"  style="width: 90%;"/>
+                    </div>
+                    <div class="ui-grid-col-2">
+                        <h:outputLink value="javascript:void(0)" onclick="PF('ccLstGrupoDlgLista').show();" title="lista">
+                            <p:graphicImage value="/resources/icon/lista.png" width="24" height="24"/>
+                        </h:outputLink>
                     </div>
                 </div>
                 <div class="ui-grid-row">
@@ -116,9 +121,9 @@
                             <f:setPropertyActionListener value="#{MbAdministrarUsuario.usuarioSeleccionado}" target="#{MbAdministrarUsuario.usuarioSeleccionado}" />
                         </p:commandButton-->
                     </div>
-                </div>      
+                </div>
             </div>
-
-        </p:panel>  
-    </h:form>    
+            <ui:include src="../ventana/vta-lista-grupos-empresariales.xhtml"/>
+        </p:panel>
+    </h:form> 
 </ui:composition>
