--- a/GrupoEmpresarial-war/web/plantilla/plantilla.xhtml
+++ b/GrupoEmpresarial-war/web/plantilla/plantilla.xhtml
@@ -8,12 +8,11 @@
     <f:view contentType="text/html">
         <h:head>
             <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+            <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0" />
             <f:facet name="first">
                 <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
             </f:facet>
-
             <link type="image/vnd.microsoft.icon" rel="shortcut icon" href="resources/icon/dane.ico"/>
-
             <h:outputStylesheet library="css" name="general.css" />
             <h:outputStylesheet library="css" name="titulos.css" />
             <h:outputStylesheet library="css" name="componentes.css" />
